# mlcg

./: Cargo.toml
.github/workflows/: rust.yml
mlcg/: Cargo.toml
mlcg-derive/: Cargo.toml
mlcg-derive/src/: lib.rs
mlcg/src/: command.rs  commands.json  env.rs  eval.rs  lib.rs  processor.rs  ref.rs  string.rs
mlcg/src/abilities/: mod.rs
mlcg/src/command/: control.rs  io.rs  mod.rs  operate.rs  unit.rs
mlcg/src/types/: building.rs  mod.rs  number.rs  unit.rs
