[workspace]
resolver = "2"
members = ["mlcg", "mlcg-derive"]

[profile.release]
lto = "thin"
strip = true

[workspace.package]
edition = "2021"
keywords = ["mindustry"]
license = "GPL-3"
repository = "https://github.com/yiyue-reimu/mlcg"
authors = ["yiyue-reimu"]

[workspace.dependencies.mlcg-derive]
version = "0.0.1"
path = "./mlcg-derive"
