[package]
name = "mlcg-derive"
version = "0.0.1"
authors.workspace = true
edition.workspace = true
description = "Mindustry Logic Code Generator"
repository.workspace = true
keywords.workspace = true
license.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = "2"
quote = "1"
proc-macro2 = "1"
serde_json = "1"
